k8s/namespaces/base/observability/kiali/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: observability
spec:
  hosts:
    - 'kiali.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 20001
            host: kiali.observability.svc.cluster.local
          weight: 100
